// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly: all permissions 1`] = `
<Fragment>
  <ActionsDropdown
    label="quality_profiles.actions.name.JavaScript"
  >
    <ActionsDropdownItem
      className="it__quality-profiles__activate-more-rules"
      to={
        {
          "pathname": "/coding_rules",
          "search": "?qprofile=key&activation=false",
        }
      }
    >
      quality_profiles.activate_more_rules
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="it__quality-profiles__backup"
      download="key.xml"
      to="/api/qualityprofiles/backup?language=js&qualityProfile=name"
    >
      backup_verb
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="it__quality-profiles__compare"
      to={
        {
          "pathname": "/profiles/compare",
          "search": "?language=js&name=name",
        }
      }
    >
      compare
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="it__quality-profiles__extend"
      onClick={[Function]}
      tooltipOverlay="quality_profiles.extend_help.name"
      tooltipPlacement="left"
    >
      extend
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="it__quality-profiles__copy"
      onClick={[Function]}
      tooltipOverlay="quality_profiles.copy_help.name"
      tooltipPlacement="left"
    >
      copy
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="it__quality-profiles__rename"
      onClick={[Function]}
    >
      rename
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="it__quality-profiles__set-as-default"
      onClick={[Function]}
    >
      set_as_default
    </ActionsDropdownItem>
    <ActionsDropdownDivider />
    <ActionsDropdownItem
      className="it__quality-profiles__delete"
      destructive={true}
      onClick={[Function]}
    >
      delete
    </ActionsDropdownItem>
  </ActionsDropdown>
</Fragment>
`;

exports[`renders correctly: copy modal 1`] = `
<Fragment>
  <ActionsDropdown
    label="quality_profiles.actions.name.JavaScript"
  >
    <ActionsDropdownItem
      className="it__quality-profiles__backup"
      download="key.xml"
      to="/api/qualityprofiles/backup?language=js&qualityProfile=name"
    >
      backup_verb
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="it__quality-profiles__compare"
      to={
        {
          "pathname": "/profiles/compare",
          "search": "?language=js&name=name",
        }
      }
    >
      compare
    </ActionsDropdownItem>
  </ActionsDropdown>
  <ProfileModalForm
    action="COPY"
    loading={false}
    onClose={[Function]}
    onSubmit={[Function]}
    profile={
      {
        "activeDeprecatedRuleCount": 0,
        "activeRuleCount": 68,
        "childrenCount": 0,
        "depth": 0,
        "isBuiltIn": false,
        "isDefault": false,
        "isInherited": false,
        "key": "key",
        "language": "js",
        "languageName": "JavaScript",
        "name": "name",
        "projectCount": 3,
        "rulesUpdatedAt": "2017-06-28T12:58:44+0000",
      }
    }
  />
</Fragment>
`;

exports[`renders correctly: delete modal 1`] = `
<Fragment>
  <ActionsDropdown
    label="quality_profiles.actions.name.JavaScript"
  >
    <ActionsDropdownItem
      className="it__quality-profiles__backup"
      download="key.xml"
      to="/api/qualityprofiles/backup?language=js&qualityProfile=name"
    >
      backup_verb
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="it__quality-profiles__compare"
      to={
        {
          "pathname": "/profiles/compare",
          "search": "?language=js&name=name",
        }
      }
    >
      compare
    </ActionsDropdownItem>
  </ActionsDropdown>
  <DeleteProfileForm
    loading={false}
    onClose={[Function]}
    onDelete={[Function]}
    profile={
      {
        "activeDeprecatedRuleCount": 0,
        "activeRuleCount": 68,
        "childrenCount": 0,
        "depth": 0,
        "isBuiltIn": false,
        "isDefault": false,
        "isInherited": false,
        "key": "key",
        "language": "js",
        "languageName": "JavaScript",
        "name": "name",
        "projectCount": 3,
        "rulesUpdatedAt": "2017-06-28T12:58:44+0000",
      }
    }
  />
</Fragment>
`;

exports[`renders correctly: edit only 1`] = `
<Fragment>
  <ActionsDropdown
    label="quality_profiles.actions.name.JavaScript"
  >
    <ActionsDropdownItem
      className="it__quality-profiles__activate-more-rules"
      to={
        {
          "pathname": "/coding_rules",
          "search": "?qprofile=key&activation=false",
        }
      }
    >
      quality_profiles.activate_more_rules
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="it__quality-profiles__backup"
      download="key.xml"
      to="/api/qualityprofiles/backup?language=js&qualityProfile=name"
    >
      backup_verb
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="it__quality-profiles__compare"
      to={
        {
          "pathname": "/profiles/compare",
          "search": "?language=js&name=name",
        }
      }
    >
      compare
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="it__quality-profiles__rename"
      onClick={[Function]}
    >
      rename
    </ActionsDropdownItem>
  </ActionsDropdown>
</Fragment>
`;

exports[`renders correctly: extend modal 1`] = `
<Fragment>
  <ActionsDropdown
    label="quality_profiles.actions.name.JavaScript"
  >
    <ActionsDropdownItem
      className="it__quality-profiles__backup"
      download="key.xml"
      to="/api/qualityprofiles/backup?language=js&qualityProfile=name"
    >
      backup_verb
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="it__quality-profiles__compare"
      to={
        {
          "pathname": "/profiles/compare",
          "search": "?language=js&name=name",
        }
      }
    >
      compare
    </ActionsDropdownItem>
  </ActionsDropdown>
  <ProfileModalForm
    action="EXTEND"
    loading={false}
    onClose={[Function]}
    onSubmit={[Function]}
    profile={
      {
        "activeDeprecatedRuleCount": 0,
        "activeRuleCount": 68,
        "childrenCount": 0,
        "depth": 0,
        "isBuiltIn": false,
        "isDefault": false,
        "isInherited": false,
        "key": "key",
        "language": "js",
        "languageName": "JavaScript",
        "name": "name",
        "projectCount": 3,
        "rulesUpdatedAt": "2017-06-28T12:58:44+0000",
      }
    }
  />
</Fragment>
`;

exports[`renders correctly: no permissions 1`] = `
<Fragment>
  <ActionsDropdown
    label="quality_profiles.actions.name.JavaScript"
  >
    <ActionsDropdownItem
      className="it__quality-profiles__backup"
      download="key.xml"
      to="/api/qualityprofiles/backup?language=js&qualityProfile=name"
    >
      backup_verb
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="it__quality-profiles__compare"
      to={
        {
          "pathname": "/profiles/compare",
          "search": "?language=js&name=name",
        }
      }
    >
      compare
    </ActionsDropdownItem>
  </ActionsDropdown>
</Fragment>
`;

exports[`renders correctly: rename modal 1`] = `
<Fragment>
  <ActionsDropdown
    label="quality_profiles.actions.name.JavaScript"
  >
    <ActionsDropdownItem
      className="it__quality-profiles__backup"
      download="key.xml"
      to="/api/qualityprofiles/backup?language=js&qualityProfile=name"
    >
      backup_verb
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="it__quality-profiles__compare"
      to={
        {
          "pathname": "/profiles/compare",
          "search": "?language=js&name=name",
        }
      }
    >
      compare
    </ActionsDropdownItem>
  </ActionsDropdown>
  <ProfileModalForm
    action="RENAME"
    loading={false}
    onClose={[Function]}
    onSubmit={[Function]}
    profile={
      {
        "activeDeprecatedRuleCount": 0,
        "activeRuleCount": 68,
        "childrenCount": 0,
        "depth": 0,
        "isBuiltIn": false,
        "isDefault": false,
        "isInherited": false,
        "key": "key",
        "language": "js",
        "languageName": "JavaScript",
        "name": "name",
        "projectCount": 3,
        "rulesUpdatedAt": "2017-06-28T12:58:44+0000",
      }
    }
  />
</Fragment>
`;

exports[`should not allow to set a profile as the default if the profile has no active rules 1`] = `
<Fragment>
  <ActionsDropdown
    label="quality_profiles.actions.name.JavaScript"
  >
    <ActionsDropdownItem
      className="it__quality-profiles__backup"
      download="key.xml"
      to="/api/qualityprofiles/backup?language=js&qualityProfile=name"
    >
      backup_verb
    </ActionsDropdownItem>
    <ActionsDropdownItem
      className="it__quality-profiles__compare"
      to={
        {
          "pathname": "/profiles/compare",
          "search": "?language=js&name=name",
        }
      }
    >
      compare
    </ActionsDropdownItem>
    <li>
      <Tooltip
        overlay="quality_profiles.cannot_set_default_no_rules"
        placement="left"
      >
        <span
          className="it__quality-profiles__set-as-default text-muted-2"
        >
          set_as_default
        </span>
      </Tooltip>
    </li>
  </ActionsDropdown>
</Fragment>
`;
